--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <div class="nav-element nav-off" id="nav-diary"> <a href="https://www.instagram.com/louisemertens" target="_blank">Diary</a></div>
             <div class="nav-element nav-off" id="nav-cata">Catalogue</div>
         </div>
+
+        <div class="nav-container" id="nav-container-back">
+            <div class="nav-element nav-off" id="nav-back"> &#60; </div> 
+        </div>
     </div>
 
 
