--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="nav-master">
         <div class="nav-container" id="nav-container-info">
-            <div class="nav-element nav-off" id="nav-louise">Louise Mertens</div>
+            <div class="nav-element nav-off" id="nav-louise">Louise Mertens +</div>
         </div>
 
         <div class="nav-container" id="nav-container-work">
@@ -46,6 +46,10 @@
        <div class="nav-container" id="nav-container-more">
             <div class="nav-element nav-off" id="nav-diary"> <a href="https://www.instagram.com/louisemertens" target="_blank">Diary</a></div>
             <div class="nav-element nav-off" id="nav-cata">Catalogue</div>
+        </div>
+
+        <div class="nav-container" id="nav-container-back">
+            <div class="nav-element nav-off" id="nav-back"> &#60; </div> 
         </div>
     </div>
 
