--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/art.css">
     <link rel="stylesheet" href="css/com.css">
     <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <link rel="stylesheet" href="js/splide/css/splide-core.min.css">
 
@@ -35,7 +36,7 @@
 
     <div class="nav-master">
         <div class="nav-container" id="nav-container-info">
-            <div class="nav-element nav-off" id="nav-louise">Louise Mertens</div>
+            <div class="nav-element nav-off" id="nav-louise">Louise Mertens +</div>
         </div>
 
         <div class="nav-container" id="nav-container-work">
@@ -46,6 +47,10 @@
        <div class="nav-container" id="nav-container-more">
             <div class="nav-element nav-off" id="nav-diary"> <a href="https://www.instagram.com/louisemertens" target="_blank">Diary</a></div>
             <div class="nav-element nav-off" id="nav-cata">Catalogue</div>
+        </div>
+
+        <div class="nav-container" id="nav-container-back">
+            <div class="nav-element nav-off" id="nav-back"> &#60; </div> 
         </div>
     </div>
 
