--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     <link rel="stylesheet" href="css/art.css">
     <link rel="stylesheet" href="css/com.css">
     <link rel="stylesheet" href="css/info.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <link rel="stylesheet" href="js/splide/css/splide-core.min.css">
 
     <!-- FONT LOAD -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+
 
     <!-- Jquery Data -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -35,7 +34,7 @@
 
     <div class="nav-master">
         <div class="nav-container" id="nav-container-info">
-            <div class="nav-element nav-off" id="nav-louise">Louise Mertens</div>
+            <div class="nav-element nav-off" id="nav-louise">Louise Mertens +</div>
         </div>
 
         <div class="nav-container" id="nav-container-work">
@@ -46,6 +45,10 @@
        <div class="nav-container" id="nav-container-more">
             <div class="nav-element nav-off" id="nav-diary"> <a href="https://www.instagram.com/louisemertens" target="_blank">Diary</a></div>
             <div class="nav-element nav-off" id="nav-cata">Catalogue</div>
+        </div>
+
+        <div class="nav-container" id="nav-container-back">
+            <div class="nav-element nav-off" id="nav-back"> &#60; </div> 
         </div>
     </div>
 
